--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/allanmosesfernandes/StellasLove#readme",
   "dependencies": {
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "pattern.css": "^1.0.0",
+    "typed.js": "^2.0.11"
   },
   "devDependencies": {
     "sass": "^1.26.10"
